--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
             <a href="https://linkedin.com/in/tayloroverton" class="social-link" target="_blank" title="LinkedIn">
                 <span>💼</span>
             </a>
-            <a href="https://twitter.com/tayloroverton" class="social-link" target="_blank" title="Twitter/X">
-                <span>🐦</span>
+            <a href="taylormoverton66@gmail.com" class="social-link" target="_blank" title="Twitter/X">
+                <span>📧</span>
             </a>
         </div>
     </section>
