--- a/index.html
+++ b/index.html
@@ -496,14 +496,14 @@
     <section id="social" class="section">
         <h2>Connect With Me</h2>
         <div class="social-links">
-            <a href="https://github.com/tayloroverton" class="social-link" target="_blank" title="GitHub">
-                <span>🐙</span>
+            <a href="https://github.com/taylor-overton" class="social-link" target="_blank" title="GitHub">
+                <span>🐙 GitHub</span>
             </a>
-            <a href="https://linkedin.com/in/tayloroverton" class="social-link" target="_blank" title="LinkedIn">
-                <span>💼</span>
+            <a href="https://linkedin.com/in/taylor-overton" class="social-link" target="_blank" title="LinkedIn">
+                <span>💼 LinkedIn</span>
             </a>
-            <a href="taylormoverton66@gmail.com" class="social-link" target="_blank" title="Twitter/X">
-                <span>📧</span>
+            <a href="mailto:taylormoverton66@gmail.com" class="social-link" target="_blank" title="Twitter/X">
+                <span>📧 Email Me</span>
             </a>
         </div>
     </section>
