--- a/index.html
+++ b/index.html
@@ -502,9 +502,6 @@
             <a href="https://linkedin.com/in/taylor-overton" class="social-link" target="_blank" title="LinkedIn">
                 <span>💼 LinkedIn</span>
             </a>
-            <a href="mailto:taylormoverton66@gmail.com" class="social-link" target="_blank" title="Twitter/X">
-                <span>📧 Email Me</span>
-            </a>
         </div>
     </section>
 
@@ -512,8 +509,7 @@
     <section id="contact" class="section">
         <h2>Get In Touch</h2>
         <div class="contact-content">
-            <p>Ready to discuss cybersecurity, cloud architecture, or potential collaborations?</p>
-            <a href="mailto:taylor.overton@email.com" class="contact-btn">📧 Send Me an Email</a>
+            <a href="mailto:taylormoverton66@gmail.com" class="contact-btn">📧 Send Me an Email</a>
         </div>
     </section>
 
