--- a/index.html
+++ b/index.html
@@ -488,8 +488,7 @@
     <!-- Resume Section -->
     <section id="resume" class="section resume-section">
         <h2>Resume</h2>
-        <p>Download my full resume to learn more about my experience and qualifications.</p>
-        <a href="#" class="download-btn" onclick="alert('Resume download would be available here!')">📄 Download Resume</a>
+        <a href="#" class="download-btn" href="https://docs.google.com/document/d/1R7TVjUwkgvhbOOv_0g64p4kp9Rh-eST9u3GPZZ6HABk/edit?usp=sharing">📄 Download Resume</a>
     </section>
 
     <!-- Social Links Section -->
@@ -514,7 +513,7 @@
             style="
                 opacity:0;
                 transition:opacity 0.3s;
-                color:#22d3ee;
+                color:#ffffff;
                 margin-top:8px;
                 font-size:14px;
             ">
@@ -522,7 +521,7 @@
             </p>
             <script>
             function copyEmail() {
-                const email = "youremail@example.com"; // change this to your email
+                const email = "taylormoverton66@gmail.com"; 
                 navigator.clipboard.writeText(email).then(() => {
                 const note = document.getElementById("notify");
                 note.style.opacity = 1;
