fix resume button

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     <!-- Resume Section -->
     <section id="resume" class="section resume-section">
         <h2>Resume</h2>
-        <a href="#" class="download-btn" href="https://docs.google.com/document/d/1R7TVjUwkgvhbOOv_0g64p4kp9Rh-eST9u3GPZZ6HABk/edit?usp=sharing">📄 Download Resume</a>
+        <a class="download-btn" href="https://docs.google.com/document/d/1R7TVjUwkgvhbOOv_0g64p4kp9Rh-eST9u3GPZZ6HABk/edit?usp=sharing">📄 Download Resume</a>
     </section>
 
     <!-- Social Links Section -->
