--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
                     <a href="#" class="project-link">Architecture</a>
                 </div>
             </div>
+            <div class="project-card">
+                <h3>Cloud Security Lab</h3>
+                <p>Hands-on project for testing IAM, network policies, and vulnerability scanning. Built a comprehensive testing environment to evaluate security controls across multiple cloud providers and document best practices for secure cloud deployments.</p>
+                <div class="project-links">
+                    <a href="#" class="project-link">View Project</a>
+                    <a href="#" class="project-link">Documentation</a>
+                </div>
+            </div>
         </div>
     </section>
 
