--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             background: linear-gradient(45deg, #00ff9d, #00bfff);
             color: #000;
             padding: 1rem 2rem;
-            border-radius: 30px;
+            border-radius: 12px;
             text-decoration: none;
             font-weight: bold;
             font-size: 1.1rem;
@@ -299,7 +299,7 @@
             height: 60px;
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(0, 255, 157, 0.2);
-            border-radius: 50%;
+            border-radius: 12px;
             color: #00ff9d;
             text-decoration: none;
             font-size: 1.5rem;
@@ -323,7 +323,7 @@
             color: #00ff9d;
             padding: 1rem 2rem;
             border: 1px solid rgba(0, 255, 157, 0.3);
-            border-radius: 30px;
+            border-radius: 12px;
             text-decoration: none;
             font-size: 1.1rem;
             transition: all 0.3s ease;
@@ -496,7 +496,12 @@
     <!-- Resume Section -->
     <section id="resume" class="section resume-section">
         <h2>Resume</h2>
-        <a class="download-btn" href="https://docs.google.com/document/d/1R7TVjUwkgvhbOOv_0g64p4kp9Rh-eST9u3GPZZ6HABk/edit?usp=sharing">📄 Download Resume</a>
+        <a class="download-btn" 
+            target="_blank" 
+            rel="noopener noreferrer"
+            href="https://docs.google.com/document/d/1R7TVjUwkgvhbOOv_0g64p4kp9Rh-eST9u3GPZZ6HABk/edit?usp=sharing">
+                📄 Download Resume
+        </a>
     </section>
 
     <!-- Social Links Section -->
