--- a/index.html
+++ b/index.html
@@ -514,14 +514,7 @@
             <a href="https://linkedin.com/in/taylor-overton" class="social-link" target="_blank" title="LinkedIn">
                 <span>💼 LinkedIn</span>
             </a>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section id="contact" class="section">
-        <h2>Get In Touch</h2>
-        <div class="contact-content">
-            <a onclick="copyEmail()" class="contact-btn">📧 Send Me an Email</a>
+                        <a onclick="copyEmail()" class="social-link">📧 Send Me an Email</a>
             <p id="notify" 
             style="
                 opacity:0;
@@ -546,6 +539,7 @@
             </script>
         </div>
     </section>
+
 
     <script>
         // Smooth scrolling for navigation links
