--- a/index.html
+++ b/index.html
@@ -508,13 +508,14 @@
     <section id="social" class="section">
         <h2>Connect With Me</h2>
         <div class="social-links">
+            <a onclick="copyEmail()" class="social-link">📧 Email</a>
             <a href="https://github.com/taylor-overton" class="social-link" target="_blank" title="GitHub">
                 <span>🐙 GitHub</span>
             </a>
             <a href="https://linkedin.com/in/taylor-overton" class="social-link" target="_blank" title="LinkedIn">
                 <span>💼 LinkedIn</span>
             </a>
-                        <a onclick="copyEmail()" class="social-link">📧 Send Me an Email</a>
+            
             <p id="notify" 
             style="
                 opacity:0;
