--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
             justify-content: center;
             gap: 2rem;
             margin-top: 2rem;
+            width: 100%;              /* make sure container takes full width */
+            box-sizing: border-box; 
         }
 
         .social-link {
